# hack

./: Makefile  README.md  auto_completion.c  auto_completion.h  challenge_generator.c  challenge_generator.h  desviation.c  desviation.h  deviation.c  deviation.h  dijkstra.c  dijkstra.h  fetcher.c  fetcher.h  graph.c  graph.h  main  main.c  node.h  path.c  path.h  struct_node.h  test_graph
cache/: %5Bout%3Ajson%5D%3Barea%5B%27name%27%3D%27Catalunya%27%5D-%3E.a%3Brelation%5B%27boundary%27%3D%27administrative%27%5D%5B%27admin_level%27%3D%277%27%5D%28area.a%29%3Bout%20tagas%3B.json  %5Bout%3Ajson%5D%3Barea%5B%27name%27%3D%27Catalunya%27%5D-%3E.a%3Brelation%5B%27boundary%27%3D%27administrative%27%5D%5B%27admin_level%27%3D%277%27%5D%28area.a%29%3Bout%20tags%3B.json  'ES'='2'_4_0.json
interface/: README.md
public_test/Case0/: ceiling.csv  obstacles.csv  types_of_bays.csv  warehouse.csv
public_test/Case1/: ceiling.csv  warehouse.csv
public_test/Case2/: obstacles.csv  types_of_bays.csv
public_test/Case3/: ceiling.csv  obstacles.csv  warehouse.csv
tests/: Makefile  test_challenge_generator.c  test_deviation.c  test_graph.c  test_path.c
ui/: CMakeLists.txt  Makefile  ui.c  ui.c.old
